--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include *.md
-recursive-include xwing_font_converter *.scss *.ttf
+recursive-include xwing_font_converter/resources *.scss *.ttf *.gif
